--- a/IronWebTest/IronWebTest.csproj
+++ b/IronWebTest/IronWebTest.csproj
@@ -148,6 +148,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextMediaTypeFormatter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
